--- a/sections/go-cart.liquid
+++ b/sections/go-cart.liquid
@@ -50,7 +50,7 @@
                 Continue shopping
             </a>
 
-            <a href="/cart/" class="go-cart__button btn">
+            <a href="/cart/" class="go-cart__button">
                 View cart
             </a>
 
@@ -95,11 +95,11 @@
         <!--go cart drawer buttons-->
         <div class="go-cart-drawer__footer js-go-cart-drawer-footer">
 
-            <a href="/checkout/" class="go-cart__button btn">
+            <a href="/checkout/" class="go-cart__button">
                 Proceed to checkout
             </a>
 
-            <a href="/cart/" class="go-cart__button btn">
+            <a href="/cart/" class="go-cart__button">
                 View cart
             </a>
 
