final mini cart edits part 2

--- a/snippets/go-cart-button.liquid
+++ b/snippets/go-cart-button.liquid
@@ -15,7 +15,7 @@
 
             <!--go cart mini cart subtotal-->
             <div class="go-cart-mini-cart__subtotal">
-                <span>Subtotal: </span>
+                <span>Estimated Total <span class="js-go-cart-counter-subtotal">{{- cart.item_count -}}</span>: </span>
                 <span class="go-cart-mini-cart__subtotal-price js-go-cart-mini-cart-subtotal"></span>
             </div>
             <!--end go cart mini cart subtotal-->
@@ -24,7 +24,7 @@
             <div class="go-cart-mini-cart__footer js-go-cart-mini-cart-footer">
 
                 <a href="/cart/" class="go-cart__button btn">
-                    Proceed to checkout
+                    Check out
                 </a>
 
             </div>
