--- a/assets/gocart.css
+++ b/assets/gocart.css
@@ -198,6 +198,7 @@
   .go-cart-mini-cart__subtotal {
     align-items: center;
     height: 50px;
+    font-weight: 400;
     padding: 0 30px;
   }
   .go-cart-mini-cart__footer,
@@ -210,7 +211,7 @@
   }
   .go-cart-mini-cart__footer {
     text-align: center;
-    padding: 20px 30px;
+    padding: 5px 30px 20px 30px;
   }
   .go-cart-item__single {
     position: relative;
@@ -219,7 +220,7 @@
     -webkit-transition: all 0.3s ease-in-out;
     transition: all 0.3s ease-in-out;
     padding: 15px 0;
-    border-bottom: 1px solid #f5f5f5;
+    border-bottom: 1px solid #939393;
   }
   .go-cart-item__info-wrapper {
     position: relative;
@@ -231,10 +232,11 @@
   .go-cart-item__info {
     max-width: 250px;
     line-height: 1.18;
+    text-align: left;
     padding: 0px 10px 0px 30px;
   }
   .go-cart-item__image {
-    width: 90px;
+    min-width: 90px;
     height: 75px;
     background-size: cover;
     background-position: 50%;
@@ -246,6 +248,7 @@
     color: #000;
     text-decoration: none;
     font-weight: bold;
+    white-space: break-spaces;
   }
 
   .go-cart-item__title:hover {
@@ -256,12 +259,19 @@
   }
 
   .go-cart-item__variant {
-    position: relative;
-    top: 5px;
+    padding-top: 2px;
     font-family: work sans;
+    font-size: 11px;
+  }
+
+  .go-cart-sub-info {
+    margin-top: 2rem;
+    position: relative;
+    display: block;
+    width: 100%;
   }
   .go-cart-item__quantity {
-    margin-top: 1rem;
+    margin-top: 2rem;
     display: flex;
     align-items: center;
   }
@@ -307,9 +317,11 @@
     user-select: none;
   }
   .go-cart-item__price {
-    position: absolute;
-    bottom: 25px;
-    right: 0;
+    float: right;
+    padding-top: 8px;
+    position: relative;
+    bottom: 2.5rem;
+    font-weight: 400;
   }
   .go-cart-item__remove {
     position: absolute;
@@ -342,6 +354,7 @@
   .go-cart-mini-cart__subtotal-price.js-go-cart-mini-cart-subtotal {
     font-family: lft-etica-mono,sans-serif;
     font-weight: normal;
+    font-weight: 700;
   }
 
   .go-cart__mini-cart.js-go-cart-mini-cart.is-open::before {
