final mini cart edits part 3
Former-commit-id: c045078333c2150c9c5b47228b6426b19a38862f
Former-commit-id: dad2f954d2cdf1377d8e8de2cd23323392ddb981
Former-commit-id: 0ea1e6beb99d9acccdb2452340fad226b2a663a5
Former-commit-id: 27a58b7fc158e8fad30234fc3540c2905d08a441
Former-commit-id: 5f25b781b58d48f9212ddaa96a1bec37ded60c64

--- a/assets/base.css
+++ b/assets/base.css
@@ -3128,6 +3128,8 @@ section:not(.shopify-section) {
 	background-repeat: no-repeat;
 	background-size: 13px;
 	background-position: 50% 50%;
+	display: inline-block;
+	vertical-align: middle;
 }
 	
 .nav-links {
