--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -303,6 +303,22 @@
 
     {% section 'footer' %}
 
+    <script src="//app.shippingratescalculator.com/js/core/main.min.js?timestamp=1659105740&shop=saunadev.myshopify.com" defer></script>
+
+    
+
+    
+
+    
+
+    
+
+    
+
+    
+
+    
+
     <ul hidden>
       <li id="a11y-refresh-page-message">{{ 'accessibility.refresh_page' | t }}</li>
       <li id="a11y-new-window-message">{{ 'accessibility.link_messages.new_window' | t }}</li>
