--- a/sections/metafield-product.liquid
+++ b/sections/metafield-product.liquid
@@ -517,11 +517,23 @@
                         <div style="width: 100%;">
                       {% endif %}
                         <strong>Order Processing:</strong> <span id="orderProcessing">
-                          {% if product.metafields.my_fields.lead_time != blank %}
+                          <!-- {% if product.metafields.my_fields.lead_time != blank %}
                          {{ product.metafields.my_fields.lead_time }}.
                          {% else %}
                           1–3 days.
-                          {% endif %}
+                          {% endif %} -->
+                          {% assign current_variant = product.selected_or_first_available_variant %}
+                          {% for variant in product.variants %}
+                          <div class="variant__description" data-variant-id="{{variant.id}}" {% if product.selected_or_first_available_variant.id == variant.id %} 
+                          style="display: block;"  
+                        {% endif %} > 
+                            
+                            <p>{{ variant.metafields.custom.lead_time }}</p>
+                          </div>
+                        {% endfor %}
+                        <style>.variant__description {
+                          display:none;
+                        }</style>
                         </span>            
                         </div>
                         {% if product.metafields.my_fields.thirty_day_returns == true %}
@@ -854,24 +866,6 @@ function isEmpty( el ){
   $('.stickyBG .sac-color').text(dcolor);
   }
 }, 800)
-
-
-//change in price
-$(document).on('click','label',function(){
-  	//console.log('data is changed')
-  setTimeout(function(){
-    // var damount = $('.price__regular .price-item[data-amount]').attr('data-amount');
-    // var dcolor = $('.bcpo-images .bcpo-value').text();
-    // console.log('current color is: '+dcolor );
-    // $('.stickyBG .price-item').text(damount);
-    // $('.stickyBG .sac-color').text(dcolor);
-
-    
-  },200)
-});
-// $(document).on('click','#sacText',function(){
-//   $('.product-form__submit').click();
-// });
 
 updateUC(1)
 function updateUC(p) {
