--- a/snippets/go-cart-button.liquid
+++ b/snippets/go-cart-button.liquid
@@ -1,5 +1,5 @@
 <!--cart button-->
-<div  class="go-cart__trigger {% if template != 'cart' %}js-go-cart-trigger{% endif %} nav-cart nav-link">
+<div id="cart-icon-bubble" class="go-cart__trigger {% if template != 'cart' %}js-go-cart-trigger{% endif %} nav-cart nav-link">
 
     <span class="js-go-cart-counter" >{{- cart.item_count -}}</span> <span class="go-cart-mini-cart__subtotal-price js-go-cart-bubble-mini-cart-subtotal"></span>
 
