--- a/sections/cart-icon-bubble.liquid
+++ b/sections/cart-icon-bubble.liquid
@@ -7,10 +7,12 @@
 -%}
 <span class="visually-hidden">{{ 'templates.cart.cart' | t }}</span>
 {%- if cart != empty -%}
-  <div class="cart-count-bubble">
+  
       {%- if cart.item_count < 100 -%}
-        <span aria-hidden="true">{{ cart.item_count }}</span>
+        <span aria-hidden="true">({{ cart.item_count }})</span>
       {%- endif -%}
       <span class="visually-hidden">{{ 'sections.header.cart_count' | t: count: cart.item_count }}</span>
-  </div>
+ 
+      <span class="etica-bold cartTotal totals__subtotal-value">
+        {{ cart.total_price | money_with_currency }}</span>
 {%- endif -%}
