--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -702,6 +702,8 @@
     ></script>
     {% endif %}
 
+  <script src="//app.shippingratescalculator.com/js/core/main.min.js?timestamp=1659473314&shop=saunaspace.myshopify.com" defer></script>
+
     <script>
         {% if product %}
         var _learnq = _learnq || [];
