--- a/sections/components-page.liquid
+++ b/sections/components-page.liquid
@@ -196,7 +196,7 @@
 	
 		
 
-					<div class="product-tile" style="flex-shrink: 0;">
+				<!--	<div class="product-tile" style="flex-shrink: 0;">
 						
 							<a id="rpsauna-cover-set" href="/products/sauna-cover-set#natural" data-url="/products/sauna-cover-set"><img src="{{ 'sauna-cover-set-natural-tile.jpg' | asset_url }}" alt="Sauna Cover Set" class="pt-img img10"  loading="lazy" /></a>
 								<a href="/products/sauna-cover-set" class="pt-name">Sauna Cover Set</a>
@@ -212,11 +212,11 @@
 								
 									<div class="ccrp p10 c32 color-choice-off" data-productID="10" data-productCode="sauna-cover-set" data-colorPrice="$1,729.99" data-colorCode="turmeric"><div class="color-choice" style="background-image:url({{ 'turmeric.jpg' | asset_url }})"></div></div>
 								
-								</div><!--color-choices-->
+								</div>
 						
 							<p class="pt-price etica price10">$1,229.99</p>
 						
-					</div>
+					</div> -->
 	
 		
 		</div>
