--- a/assets/gocart.css
+++ b/assets/gocart.css
@@ -299,6 +299,7 @@
     width: 30px;
     height: 24px;
     margin: 0;
+    border-radius: 0;
     text-align: center;
     font-size: 1rem;
     color: #000;
