--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -33,7 +33,7 @@
     {% if page_description %}
       <meta name="description" content="{{ page_description | escape }}">
     {% endif %}
-    <script src="{{ 'gocart.js' | asset_url }}" async></script>
+    <script src="{{ 'gocart.js' | asset_url }}"></script>
 
     {% render 'meta-tags' %}
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
